--- a/Product Inventory System/css/dashboard.css
+++ b/Product Inventory System/css/dashboard.css
@@ -1,32 +1,27 @@
 body {
     background: rgb(182, 176, 176);
+    margin: 0;
 }
 
-.header {
+header {
     background: rgb(39, 38, 38);
-    display: block;
-    position: fixed;
-    margin-bottom: 1%;
-    top: 0;
-    left: 0;
-    right: 0;
+    overflow: hidden;
     color: azure;
 }
 
-.element {
-    text-align: center;
-    margin-left: 50px;
+.element{
     float: left;
+    padding-left: 2%;
+    margin-left: 5%;
 }
-
-.elements {
-    text-align: center;
-    margin-left: 30px;
+.tables{
     float: right;
+    margin-right:2%;
 }
 
-.elements input {
-    transform: translateY(65%);
+td{
+    width: 40%;
+    text-align: center;
 }
 
 .profile {
@@ -34,63 +29,27 @@ body {
     height: 20px;
     padding: 5px;
     border-radius: 50%;
-    margin-right: 10px;
-    transform: translateY(29%);
     background: rgb(226, 226, 226);
 }
 
+section{
+    float: left;
+    display: flexbox;
+    width: 32.3%;
+    height: fit-content;
+    margin: 0.5%;
+    text-align: center;
+    background: whitesmoke;
+}
+
+.row:after{
+    content: "";
+    display: table;
+    clear: both;
+}
 footer {
     background: rgb(36, 35, 35);
     color: white;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    overflow: hidden;
     text-align: center;
-}
-
-.columns {
-    margin-top: 4%;
-    margin-bottom: 4%;
-}
-
-section, aside, article {
-    background: white;
-    color: black;
-    text-align: center;
-}
-
-#feature, #status {
-    float: left;
-    padding-bottom: 5%;
-    width: 20%;
-    margin:0.5%;
-}
-
-#category{
-    float: left;
-    /* padding-bottom: 12%; */
-    width: 62%;
-    margin: 0.5%;
-}
-
-#stories, #management, #recent{
-    float: right;
-    /* padding-bottom: 3%; */
-    width: 15%;
-    margin: 0.5%;
-}
-
-#statistics{
-    float: right;
-    padding-bottom: 3%;
-    width: 30%;
-    margin: 0.5%;
-}
-
-#sub{
-    float: left;
-    padding-bottom: 3%;
-    width: 30%;
-    margin: 0.5%;
 }
