--- a/product-inventory/src/components/login.css
+++ b/product-inventory/src/components/login.css
@@ -1,7 +1,3 @@
-body {
-    background: rgb(182, 176, 176);
-}
-
 .log {
     background: white;
     text-align: center;
@@ -9,8 +5,13 @@ body {
     margin: auto;
     margin-top: auto;
     border-radius: 10%;
-    transform: translateY(25%);
+    transform: translateY(30%);
     box-shadow: 0px 5px 6px 8px #888888;
+}
+
+.log::after {
+    clear: both;
+    display: block;
 }
 
 input {
@@ -35,40 +36,21 @@ input:hover {
     transition: all 0.4s ease-in;
 }
 
-figcaption{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bolder;
-    margin-bottom: 20px;
-}
-
 .center {
     display: flex;
     margin-top: 12px;
-    margin-bottom: 50px;
     justify-content: center;
     align-items: center;
 }
 
-.profile {
-    width: 100px;
-    height: 100px;
-    padding: 5px;
-    margin-top: 50px;
-    margin-bottom: 5px;
-    border-radius: 50%;
-    background: rgb(226, 226, 226);
-}
-
-.profile:hover {
+img {
     width: 100px;
     height: 100px;
     padding: 5px;
     margin-top: 50px;
     margin-bottom: 20px;
     border-radius: 50%;
-    color: rgb(19, 18, 18);
-    background: rgb(168, 167, 167);
-    transition: all 0.4s ease-in;
+    background: rgb(226, 226, 226);
 }
 
 section {
@@ -78,8 +60,8 @@ section {
 button {
     background: rgb(76, 76, 230);
     color: white;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 40px;
+    padding-right: 40px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 10px;
@@ -90,12 +72,17 @@ button {
 button:hover {
     background: rgb(37, 37, 158);
     color: white;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 50px;
+    padding-right: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 10px;
     border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+#signup:hover {
+    color: black;
     transition: all 0.2s ease-in;
 }
 
