--- a/product-inventory/src/components/login.css
+++ b/product-inventory/src/components/login.css
@@ -9,7 +9,7 @@
     box-shadow: 0px 5px 6px 8px #888888;
 }
 
-.log::after {
+.log:after {
     clear: both;
     display: block;
 }
@@ -23,7 +23,7 @@ input {
     transition: all 0.4s ease-in;
 }
 
-input::placeholder {
+input:placeholder {
     color: rgb(87, 85, 85);
 }
 
@@ -36,12 +36,12 @@ input:hover {
     transition: all 0.4s ease-in;
 }
 
-.center {
+/* .center {
     display: flex;
     margin-top: 12px;
     justify-content: center;
     align-items: center;
-}
+} */
 
 img {
     width: 100px;
