--- a/product-inventory/src/components/headerfooter.css
+++ b/product-inventory/src/components/headerfooter.css
@@ -1,3 +1,43 @@
+header {
+    background: rgb(39, 38, 38);
+    overflow: hidden;
+    color: azure;
+    /* position: fixed;
+    left: 0;
+    right: 0;
+    top: 0; */
+}
+
+header:after {
+    content: "";
+    display: inline-flexbox;
+    clear: both;
+}
+
+.element {
+    float: left;
+    padding-left: 2%;
+    margin-left: 5%;
+}
+
+.tables {
+    float: right;
+    margin-right: 2%;
+}
+
+td {
+    width: 40%;
+    text-align: center;
+}
+
+.profile {
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    border-radius: 50%;
+    background: rgb(226, 226, 226);
+}
+
 footer {
     background: rgb(36, 35, 35);
     color: white;
