--- a/product-inventory/src/components/signup.css
+++ b/product-inventory/src/components/signup.css
@@ -1,11 +1,11 @@
-.log {
+.logsign {
     background: white;
     text-align: center;
     width: 300px;
     margin: auto;
     margin-top: auto;
     border-radius: 10%;
-    transform: translateY(5%);
+
     box-shadow: 0px 5px 6px 8px #888888;
 }
 
