Assignments and product-inventory folder has Usecase

--- a/PIS HTML5 CSS/css/login.css
+++ b/PIS HTML5 CSS/css/login.css
@@ -20,7 +20,7 @@ body {
 
 input {
     padding: 10px;
-    margin: 5px;
+    margin-bottom:5px;
     text-align: center;
     background: rgb(189, 188, 188);
     border: 0px;
