--- a/product-inventory/src/components/login.css
+++ b/product-inventory/src/components/login.css
@@ -6,7 +6,7 @@
     margin: auto;
     margin-top: auto;   
     border-radius: 10%;
-    transform: translateY(14%);
+    transform: translateY(20%);
     box-shadow: 0px 5px 6px 8px #888888;
 }
 
@@ -17,11 +17,10 @@
 
 input {
     padding: 10px;
-    margin: 5px;
+    margin-bottom: 5px;
     text-align: center;
     background: rgb(189, 188, 188);
     border: 0px;
-
     transition: all 0.4s ease-in;
 }
 
@@ -31,19 +30,11 @@ input::placeholder {
 
 input:hover {
     padding: 10px;
-    margin: 5px;
+    margin-bottom: 5px;
     text-align: center;
     color: rgb(19, 18, 18);
     background: rgb(168, 167, 167);
     transition: all 0.4s ease-in;
-}
-
-.center {
-    display: block;
-    margin-top: 12px;
-    margin-bottom: 6px;
-    justify-content: center;
-    align-items: center;
 }
 
 .log img {
@@ -58,6 +49,31 @@ input:hover {
 
 #signup:hover {
     color: black;
+    transition: all 0.2s ease-in;
+}
+
+button {
+    display: block;
+    background: rgb(76, 76, 230);
+    color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+button:hover {
+    background: rgb(37, 37, 158);
+    color: white;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    border: 0px;
     transition: all 0.2s ease-in;
 }
 
@@ -91,7 +107,45 @@ button:disabled:hover{
     transition: all 0.2s ease-in;
 }
 
-input[type=text], input[type=password]{
+.error {
+    color: #db2269;
+    font-size: medium;
+    display: relative;
+}
+
+button:disabled {
+    background: rgb(38, 38, 44);
+    color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+button:disabled:hover{
+    background: rgb(38, 38, 44);
+    color: white;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+input[type=text], input[type=password], input[type=email]{
     box-sizing: border-box;
-    width: 100%;
+    width:80%
+}
+
+.center {
+    display: flex;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    justify-content: center;
+    align-items: center;
 }
