--- a/product-inventory/src/components/signup.css
+++ b/product-inventory/src/components/signup.css
@@ -2,16 +2,22 @@
     background: white;
     text-align: center;
     width: 300px;
+    height:550px;
     margin: auto;
     margin-top: auto;
     border-radius: 10%;
-
+    transform: translateY(5%);
     box-shadow: 0px 5px 6px 8px #888888;
+}
+
+.logsign::after {
+    clear: both;
+    display: block;
 }
 
 input {
     padding: 10px;
-    margin: 5px;
+    margin-bottom: 5px;
     text-align: center;
     background: rgb(189, 188, 188);
     border: 0px;
@@ -24,7 +30,7 @@ input::placeholder {
 
 input:hover {
     padding: 10px;
-    margin: 5px;
+    margin-bottom: 5px;
     text-align: center;
     color: rgb(19, 18, 18);
     background: rgb(168, 167, 167);
@@ -35,14 +41,6 @@ figcaption{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bolder;
     margin-bottom: 20px;
-}
-
-.center {
-    display: flex;
-    margin-top: 12px;
-    margin-bottom: 50px;
-    justify-content: center;
-    align-items: center;
 }
 
 figure input {
@@ -67,7 +65,16 @@ figure input {
     transition: all 0.4s ease-in;
 }
 
+.centersign {
+    display: flex;
+    margin-top: 15px;
+    /* margin-bottom: 6px; */
+    justify-content: center;
+    align-items: center;
+}
+
 button {
+    display: block;
     background: rgb(76, 76, 230);
     color: white;
     padding-left: 30px;
@@ -119,4 +126,9 @@ button:disabled:hover{
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
+}
+
+input[type=text], input[type=password], input[type=email]{
+    box-sizing: border-box;
+    width:80%
 }
