--- a/product-inventory/src/components/headerfooter.css
+++ b/product-inventory/src/components/headerfooter.css
@@ -25,7 +25,7 @@ td {
     vertical-align: middle;
 }
 
-#signout {
+.headerButton {
     background: rgb(39, 38, 38);
     color: white;
     border-radius: 10px;
@@ -33,7 +33,7 @@ td {
     transition: all 0.2s ease-in;
 }
 
-#signout:hover {
+.headerButton:hover {
     background: rgb(29, 28, 28);
     color: white;
     padding-left: 50px;
