Assignments and product-inventory folder has Usecase

--- a/product-inventory/src/components/addproduct.css
+++ b/product-inventory/src/components/addproduct.css
@@ -54,3 +54,8 @@ button:disabled:hover{
     clear: both;
     height: 60px;
 }
+
+.columns input[type=text], input[type=file]{
+    width:100%;
+    text-align: left;
+}
