--- a/product-inventory/src/components/headerfooter.css
+++ b/product-inventory/src/components/headerfooter.css
@@ -56,6 +56,7 @@ footer {
     color: white;
     display: block;
     position: fixed;
+    margin-top: 200px;
     bottom: 0;
     left: 0;
     right: 0;
