Assignments and product-inventory folder has Usecase

--- a/product-inventory/src/components/addproduct.css
+++ b/product-inventory/src/components/addproduct.css
@@ -55,7 +55,7 @@ button:disabled:hover{
     height: 60px;
 }
 
-.columns input[type=text], input[type=file]{
+.columns input[type=text], .columns input[type=file]{
     width:100%;
     text-align: left;
 }
