--- a/product-inventory/src/components/inventory.css
+++ b/product-inventory/src/components/inventory.css
@@ -30,6 +30,7 @@
     background: rgb(76, 76, 230);
     color: white;
     margin-top: 10px;
+    margin-left: 10px;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 10px;
@@ -43,6 +44,7 @@
     background: rgb(37, 37, 158);
     color: white;
     margin-top: 10px;
+    margin-left: 10px;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 10px;
@@ -67,7 +69,7 @@
 
 
 input[type=search] {
-    width: 90%;
+    width: 89%;
     float: right;
     margin-right: 10px;
     margin-top: 10px;
@@ -75,9 +77,9 @@ input[type=search] {
 }
 
 input[type=search]:hover {
-    width: 90%;
+    width: 89%;
     float: right;
     margin-right: 10px;
     margin-top: 10px;
-    background: rgb(223, 222, 222);
+    background: white;
 }
