--- a/product-inventory/src/components/inventory.css
+++ b/product-inventory/src/components/inventory.css
@@ -1,9 +1,9 @@
 #product tr {
     display: block;
     float: left;
-    width: 28.5%;
+    width: 20.5%;
     margin: 1.5rem;
-    padding: 0 0.5rem 0.5rem 1rem;
+    padding: 0 0 0.5rem 1rem;
     background: white;
     box-shadow: 0 0 1rem black;
     text-align: center;
@@ -12,29 +12,43 @@
 #product td {
     display: block;
     text-align: left;
-    margin: 0 0.5rem 0.5rem 0;
+    margin: 0 0.5rem 0 0.5rem;
     width: 100%;
 }
 
 #product td img {
-    box-sizing: border-box;
-    margin-bottom: 20px;
+    display: block;
+    margin: 0.5rem 0 4rem 0;
     height: 200px;
-    width: 100%;
     border-radius: 0%;
-    background: rgb(128, 127, 127);
+    background: rgb(255, 255, 255);
 }
 
-.inventoryButton, .deleteButton {
+#product td button{
+    display: block;
+    float: left;
+    margin:2.5rem 0.5rem 0.5rem 0;
+    background: rgb(173, 42, 42);
+    color: white;
+    padding:10px 30px 10px 30px;
+    border-radius: 0%;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+#product td #deleteButton{
+    float: right;
+    margin:2.35rem 2.2rem 0.5rem 0;
+    background: rgb(81, 23, 146);
+}
+
+.inventoryButton {
     display: inline;
     background: rgb(76, 76, 230);
     color: white;
     margin-top: 10px;
     margin-left: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding:10px 30px 10px 30px;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
@@ -45,16 +59,13 @@
     color: white;
     margin-top: 10px;
     margin-left: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding:10px 30px 10px 30px;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
 }
 
-.deleteButton:hover {
+/* .deleteButton:hover {
     background: rgb(37, 37, 158);
     color: white;
     margin-top: 10px;
@@ -65,7 +76,7 @@
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
-}
+} */
 
 
 input[type=search] {
