--- a/product-inventory/src/components/inventory.css
+++ b/product-inventory/src/components/inventory.css
@@ -2,7 +2,7 @@
     display: block;
     float: left;
     width: 20.5%;
-    margin: 1.5rem;
+    margin: 0.5rem 1.6rem 0.5rem 1.6rem;
     padding: 0 0 0.5rem 1rem;
     background: white;
     box-shadow: 0 0 1rem black;
