--- a/product-inventory/src/components/inventory.css
+++ b/product-inventory/src/components/inventory.css
@@ -2,7 +2,7 @@
     display: block;
     float: left;
     width: 310px;
-    margin: 0.5rem 1.6rem 0.5rem 1.6rem;
+    margin: 1.5rem 1.6rem 0.5rem 1.6rem;
     padding: 0 0 0.5rem 1rem;
     background: white;
     box-shadow: 0 0 1rem black;
@@ -82,8 +82,7 @@
 input[type=search] {
     width: 89%;
     float: right;
-    margin-right: 10px;
-    margin-top: 10px;
+    margin: 10px 10px 0 0;
     background: white;
 }
 
@@ -93,4 +92,9 @@ input[type=search]:hover {
     margin-right: 10px;
     margin-top: 10px;
     background: white;
+}
+
+.row:after{
+    clear: both;
+    margin-bottom: 2.5rem;
 }
