--- a/product-inventory/src/components/login.css
+++ b/product-inventory/src/components/login.css
@@ -3,10 +3,9 @@
     text-align: center;
     width: 300px;
     height: 450px;
-    margin: auto;
-    margin-top: auto;   
-    border-radius: 10%;
-    transform: translateY(20%);
+    margin: auto;  
+    border-radius: 20px;
+    transform: translateY(80px);
     box-shadow: 0px 5px 6px 8px #888888;
 }
 
@@ -53,13 +52,9 @@ input:hover {
 }
 
 button {
-    display: block;
     background: rgb(76, 76, 230);
     color: white;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 30px 10px 30px;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
@@ -68,10 +63,7 @@ button {
 button:hover {
     background: rgb(37, 37, 158);
     color: white;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 40px 10px 40px;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
@@ -86,10 +78,7 @@ button:hover {
 button:disabled {
     background: rgb(38, 38, 44);
     color: white;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 30px 10px 30px;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
@@ -98,10 +87,7 @@ button:disabled {
 button:disabled:hover{
     background: rgb(38, 38, 44);
     color: white;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 40px 10px 40px;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
@@ -113,39 +99,8 @@ button:disabled:hover{
     display: relative;
 }
 
-button:disabled {
-    background: rgb(38, 38, 44);
-    color: white;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    border: 0px;
-    transition: all 0.2s ease-in;
-}
-
-button:disabled:hover{
-    background: rgb(38, 38, 44);
-    color: white;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    border: 0px;
-    transition: all 0.2s ease-in;
-}
-
-input[type=text], input[type=password], input[type=email]{
-    box-sizing: border-box;
-    width:90%;
-}
-
-.center {
-    display: flex;
-    margin-top: 15px;
-    margin-bottom: 60px;
+#login {
+    margin: 2.5rem 6rem 2.5rem 6rem;
     justify-content: center;
     align-items: center;
 }
