--- a/product-inventory/src/components/login.css
+++ b/product-inventory/src/components/login.css
@@ -104,3 +104,8 @@ button:disabled:hover{
     justify-content: center;
     align-items: center;
 }
+
+input[type=password], input[type=email]{
+    box-sizing: border-box;
+    width:200px;
+}
