--- a/product-inventory/src/components/signup.css
+++ b/product-inventory/src/components/signup.css
@@ -5,7 +5,7 @@
     height:550px;
     margin: auto;
     margin-top: auto;
-    border-radius: 10%;
+    border-radius: 10px;
     transform: translateY(5%);
     box-shadow: 0px 5px 6px 8px #888888;
 }
@@ -128,7 +128,3 @@ button:disabled:hover{
     transition: all 0.2s ease-in;
 }
 
-input[type=text], input[type=password], input[type=email]{
-    box-sizing: border-box;
-    width:90%;
-}
