--- a/product-inventory/src/components/headerfooter.css
+++ b/product-inventory/src/components/headerfooter.css
@@ -9,18 +9,17 @@ header {
 
 .element {
     float: left;
-    padding-left: 2%;
-    margin-left: 5%;
+    margin-left: 6rem;
     vertical-align: middle;
 }
 
 .tables {
     float: right;
-    margin-right: 2%;
+    margin-right: 2rem;
 }
 
 td {
-    width: 40%;
+    width: 70px;
     text-align: center;
     vertical-align: middle;
 }
