--- a/product-inventory/src/components/dashboard.css
+++ b/product-inventory/src/components/dashboard.css
@@ -3,7 +3,7 @@ section {
     float: left;
     width: 495px;
     height:310px;
-    margin: 9.5rem 0.5rem 9.5rem 0.5rem;
+    margin: 0.7rem 0.5rem 0 0.5rem;
     text-align: center;
     box-shadow: 0 0 1rem black;
     background: white;
@@ -16,4 +16,8 @@ section:hover{
 .row:after{
     clear: both;
     display: block;
+}
+
+section #price{
+    text-align: center;
 }
