--- a/product-inventory/src/components/signup.css
+++ b/product-inventory/src/components/signup.css
@@ -7,7 +7,7 @@
     margin-top: auto;
     border-radius: 10px;
     transform: translateY(5%);
-    box-shadow: 0px 5px 6px 8px #888888;
+    box-shadow: 0 0 1rem black;
 }
 
 .logsign::after {
