Assignments and product-inventory folder has Usecase

--- a/product-inventory/src/components/addproduct.css
+++ b/product-inventory/src/components/addproduct.css
@@ -23,7 +23,7 @@ form input {
 .error {
     color: #db2269;
     font-size: medium;
-    display: relative;
+    display: block;
 }
 
 button:disabled {
