--- a/product-inventory/src/components/signup.css
+++ b/product-inventory/src/components/signup.css
@@ -1,4 +1,4 @@
-.logsign {
+/* .logsign {
     background: white;
     text-align: center;
     width: 300px;
@@ -37,42 +37,6 @@ input:hover {
     transition: all 0.4s ease-in;
 }
 
-figcaption{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bolder;
-    margin-bottom: 20px;
-}
-
-figure input {
-    width: 100px;
-    height: 100px;
-    padding: 5px;
-    margin-top: 50px;
-    margin-bottom: 5px;
-    border-radius: 50%;
-    background: rgb(226, 226, 226);
-}
-
-.profile:hover {
-    width: 100px;
-    height: 100px;
-    padding: 5px;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    border-radius: 50%;
-    color: rgb(19, 18, 18);
-    background: rgb(168, 167, 167);
-    transition: all 0.4s ease-in;
-}
-
-.centersign {
-    display: flex;
-    margin-top: 15px;
-    /* margin-bottom: 6px; */
-    justify-content: center;
-    align-items: center;
-}
-
 button {
     display: block;
     background: rgb(76, 76, 230);
@@ -101,7 +65,7 @@ button:hover {
 .error {
     color: #db2269;
     font-size: medium;
-    display: relative;
+    display: block;
 }
 
 button:disabled {
@@ -127,4 +91,4 @@ button:disabled:hover{
     border: 0px;
     transition: all 0.2s ease-in;
 }
-
+ */
