--- a/product-inventory/src/components/updateproduct.css
+++ b/product-inventory/src/components/updateproduct.css
@@ -12,7 +12,7 @@ form input{
 .error {
     color: #db2269;
     font-size: medium;
-    display: relative;
+    display: block;
 }
 
 button:disabled {
