--- a/product-inventory/src/components/headerfooter.css
+++ b/product-inventory/src/components/headerfooter.css
@@ -28,8 +28,15 @@ td {
     background: rgb(39, 38, 38);
     color: white;
     border-radius: 10px;
+    padding:5px;
     border: 0px;
     transition: all 0.2s ease-in;
+}
+
+input[type=search]{
+    text-align: center;
+    border: none;
+    padding: 10px;
 }
 
 .headerButton:hover {
