--- a/product-inventory/src/components/signup.css
+++ b/product-inventory/src/components/signup.css
@@ -1,62 +1,73 @@
-/* .logsign {
+.logsign {
     background: white;
     text-align: center;
-    width: 300px;
-    height:550px;
+    width: 500px;
+    height:450px;
     margin: auto;
-    margin-top: auto;
+    padding: 7.5rem 0 0 0;
     border-radius: 10px;
-    transform: translateY(5%);
+    transform: translateY(50px);
     box-shadow: 0 0 1rem black;
 }
 
-.logsign::after {
-    clear: both;
-    display: block;
-}
-
-input {
+.logsign input {
     padding: 10px;
-    margin-bottom: 5px;
     text-align: center;
     background: rgb(189, 188, 188);
     border: 0px;
+    box-sizing: border-box;
+    width:400px;
+    margin: 0.5rem 0 0.5rem 0;
     transition: all 0.4s ease-in;
 }
 
-input::placeholder {
+.logsign input::placeholder {
     color: rgb(87, 85, 85);
 }
 
-input:hover {
+.logsign input:hover {
     padding: 10px;
-    margin-bottom: 5px;
     text-align: center;
     color: rgb(19, 18, 18);
     background: rgb(168, 167, 167);
     transition: all 0.4s ease-in;
 }
 
-button {
-    display: block;
+.logsign button {
     background: rgb(76, 76, 230);
     color: white;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 30px 10px 30px;
+    margin: 0.5rem 6rem 0.5rem 6rem;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
 }
 
-button:hover {
+.logsign button:hover {
     background: rgb(37, 37, 158);
     color: white;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 40px 10px 40px;
+    margin: 0.5rem 5rem 0.5rem 5rem;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+.logsign button:disabled {
+    background: rgb(38, 38, 44);
+    color: white;
+    padding: 10px 30px 10px 30px;
+    margin: 0.5rem 6rem 0.5rem 6rem;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+.logsign button:disabled:hover{
+    background: rgb(38, 38, 44);
+    color: white;
+    padding: 10px 40px 10px 40px;
+    margin: 0.5rem 5rem 0.5rem 5rem;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
@@ -64,31 +75,6 @@ button:hover {
 
 .error {
     color: #db2269;
-    font-size: medium;
+    font-size: small;
     display: block;
 }
-
-button:disabled {
-    background: rgb(38, 38, 44);
-    color: white;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    border: 0px;
-    transition: all 0.2s ease-in;
-}
-
-button:disabled:hover{
-    background: rgb(38, 38, 44);
-    color: white;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    border: 0px;
-    transition: all 0.2s ease-in;
-}
- */
