--- a/product-inventory/src/components/updateproduct.css
+++ b/product-inventory/src/components/updateproduct.css
@@ -1,21 +1,25 @@
-fieldset legend{
-    font-size: x-large;
-}
-fieldset label{
-    padding: 3px;
+/* form {
+    margin: 0.5rem;
+    padding: 1rem;
+    background: white;
+    box-sizing: border-box;
 }
 
-form input{
-    width: 100%;
+.column {
+    margin: 0.5rem;
+}
+
+fieldset legend {
+    font-size: x-large;
 }
 
 .error {
     color: #db2269;
-    font-size: medium;
+    font-size: small;
     display: block;
 }
 
-button:disabled {
+.column button:disabled {
     background: rgb(38, 38, 44);
     color: white;
     padding-left: 30px;
@@ -27,7 +31,7 @@ button:disabled {
     transition: all 0.2s ease-in;
 }
 
-button:disabled:hover{
+.column button:disabled:hover{
     background: rgb(38, 38, 44);
     color: white;
     padding-left: 40px;
@@ -39,7 +43,19 @@ button:disabled:hover{
     transition: all 0.2s ease-in;
 }
 
-.columns input[type=text], .columns input[type=file]{
-    width:100%;
-    text-align: left;
+.row:after {
+    clear: both;
+    height: 60px;
 }
+
+.column input[type=text], .columns input[type=file], .columns #price{
+    display: block;
+    text-align: left;
+    padding: 10px;
+    background: rgb(189, 188, 188);
+    border: 0px;
+    box-sizing: border-box;
+    width:180px;
+    margin: 0.5rem 0 0rem 0;
+    transition: all 0.4s ease-in;
+} */
