--- a/product-inventory/src/components/addproduct.css
+++ b/product-inventory/src/components/addproduct.css
@@ -12,63 +12,67 @@
     margin-top: 1rem;
 }
 
-#add input[type=text], #add input[type=file]{
-    all:unset;
+.error {
+    color: #db2269;
+    font-size: small;
+    display: block;
+}
+
+#add label {
+    all: unset;
+    text-align: left;
+}
+
+#add input[type=text], #add input[type=file] {
+    all: unset;
     display: block;
     text-align: left;
     padding: 10px;
     background: rgb(189, 188, 188);
     border: 0px;
     box-sizing: border-box;
-    width:90rem;
+    width: 90rem;
     margin: 0;
     transition: all 0.4s ease-in;
 }
-/* 
-fieldset label {
-    padding: 3px;
-} */
 
-/* form input {
-    width: 100rem;
-} */
-
-/* .error {
-    color: #db2269;
-    font-size: small;
-    display: block;
-}
-
-button:disabled {
-    background: rgb(38, 38, 44);
+#add button {
+    background: rgb(76, 76, 230);
     color: white;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 30px 10px 30px;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
 }
 
-button:disabled:hover{
-    background: rgb(38, 38, 44);
+#add button:hover {
+    background: rgb(37, 37, 158);
     color: white;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 40px 10px 40px;
     border-radius: 10px;
     border: 0px;
     transition: all 0.2s ease-in;
 }
 
-.row:after {
+#add button:disabled {
+    background: rgb(38, 38, 44);
+    color: white;
+    padding: 10px 30px 10px 30px;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+#add button:disabled:hover {
+    background: rgb(38, 38, 44);
+    color: white;
+    padding: 10px 40px 10px 40px;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+#add:after {
     clear: both;
     height: 60px;
 }
-
-.columns input[type=text], .columns input[type=file]{
-    width:100%;
-    text-align: left;
-} */
