--- a/product-inventory/src/components/updateproduct.css
+++ b/product-inventory/src/components/updateproduct.css
@@ -1,16 +1,15 @@
-/* form {
+#update form {
     margin: 0.5rem;
     padding: 1rem;
     background: white;
-    box-sizing: border-box;
 }
 
-.column {
-    margin: 0.5rem;
-}
-
-fieldset legend {
+#update fieldset legend {
     font-size: x-large;
+}
+
+#update .columns {
+    margin-top: 1rem;
 }
 
 .error {
@@ -19,43 +18,61 @@ fieldset legend {
     display: block;
 }
 
-.column button:disabled {
-    background: rgb(38, 38, 44);
-    color: white;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    border: 0px;
-    transition: all 0.2s ease-in;
+#update label {
+    all: unset;
+    text-align: left;
 }
 
-.column button:disabled:hover{
-    background: rgb(38, 38, 44);
-    color: white;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    border: 0px;
-    transition: all 0.2s ease-in;
-}
-
-.row:after {
-    clear: both;
-    height: 60px;
-}
-
-.column input[type=text], .columns input[type=file], .columns #price{
+#update input[type=text], #add input[type=file] {
+    all: unset;
     display: block;
     text-align: left;
     padding: 10px;
     background: rgb(189, 188, 188);
     border: 0px;
     box-sizing: border-box;
-    width:180px;
-    margin: 0.5rem 0 0rem 0;
+    width: 90rem;
+    margin: 0;
     transition: all 0.4s ease-in;
-} */
+}
+
+#update button {
+    background: rgb(76, 76, 230);
+    color: white;
+    padding: 10px 30px 10px 30px;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+#update button:hover {
+    background: rgb(37, 37, 158);
+    color: white;
+    padding: 10px 40px 10px 40px;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+#update button:disabled {
+    background: rgb(38, 38, 44);
+    color: white;
+    padding: 10px 30px 10px 30px;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+#update button:disabled:hover {
+    background: rgb(38, 38, 44);
+    color: white;
+    padding: 10px 40px 10px 40px;
+    border-radius: 10px;
+    border: 0px;
+    transition: all 0.2s ease-in;
+}
+
+#update:after {
+    clear: both;
+    height: 60px;
+}
