React Native-add, delete, update

--- a/redux-activity/src/container/menu.css
+++ b/redux-activity/src/container/menu.css
@@ -1,7 +1,6 @@
 .flex-container{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     align-items: center;
     background: rgb(39, 38, 38);
 }
