--- a/redux-activity/src/container/productlist.css
+++ b/redux-activity/src/container/productlist.css
@@ -2,12 +2,37 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     margin: 1rem;
 }
 
 #flex-container input[type=search] {
     text-align: center;
     border: none;
-    width:600px;
+    width: 600px;
     padding: 10px;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    flex-flow: row wrap;    
+}
+
+li {
+    width:200px;
+    background: white;
+    text-align: center;
+    margin:1rem 1rem 0 0;
+    font-weight: 550;
+}
+
+img {
+    width: 200px;
+    height: 200px;
+}
+
+#flex-container2 {
+    display: flex;
+    flex-direction: row;
 }
