--- a/redux-activity/src/container/productlist.css
+++ b/redux-activity/src/container/productlist.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 1rem;
+    margin: 1rem 0 1rem 0;
 }
 
 #flex-container input[type=search] {
@@ -20,7 +20,7 @@ ul {
 }
 
 li {
-    width:200px;
+    width:225px;
     background: white;
     text-align: center;
     margin:1rem 1rem 0 0;
@@ -28,8 +28,8 @@ li {
 }
 
 img {
-    width: 200px;
-    height: 200px;
+    width: 220px;
+    height:210px;
 }
 
 #flex-container2 {
