--- a/redux-activity/src/container/menu.css
+++ b/redux-activity/src/container/menu.css
@@ -22,6 +22,7 @@
     padding: 5px;
     border: 0px;
     transition: all 0.2s ease-in;
+    cursor: pointer;
 }
 
 .headerButton:hover {
@@ -31,5 +32,6 @@
     padding-right: 50px;
     border-radius: 10px;
     border: 0px;
+    cursor: pointer;
     transition: all 0.2s ease-in;
 }
