--- a/redux-activity/src/container/productlist.css
+++ b/redux-activity/src/container/productlist.css
@@ -1,4 +1,4 @@
-#flex-container {
+#flex-container2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +6,7 @@
     margin: 1rem 0 1rem 0;
 }
 
-#flex-container input[type=search] {
+#flex-container2 input[type=search] {
     text-align: center;
     border: none;
     width: 600px;
@@ -26,14 +26,10 @@ li {
     text-align: center;
     margin:1rem 1rem 0 0;
     font-weight: 550;
+    cursor: pointer;
 }
 
 img {
     width: 220px;
     height:210px;
-}
-
-#flex-container2 {
-    display: flex;
-    flex-direction: row;
 }
