--- a/redux-activity/src/container/addproduct.css
+++ b/redux-activity/src/container/addproduct.css
@@ -1,77 +1,57 @@
-#add form {
-    margin: 0.5rem;
-    padding: 1rem;
-    background: white;
+form{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0.5rem 1rem 0.5rem;
 }
 
-#add fieldset legend {
+form legend{
+    font-weight: 600;
     font-size: x-large;
+    text-align: center;
+    padding: 5px;
+    background-color:white;
+    border: 1px solid black
 }
 
-#add .columns {
-    margin-top: 1rem;
+form fieldset{
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align:center;
+    background-color:white;
+    padding: 20px;
 }
 
-.error {
-    color: #db2269;
-    font-size: small;
-    display: block;
+fieldset input, fieldset select{
+    margin-left: auto;
+    margin-right:auto;
 }
 
-#add label {
-    all: unset;
-    text-align: left;
-}
-
-#add input[type=text], #add input[type=file] {
-    display: block;
-    text-align: left;
-    padding: 10px;
-    background: rgb(189, 188, 188);
-    border: 0px;
-    box-sizing: border-box;
-    width: 90rem;
-    margin: 0;
-    transition: all 0.4s ease-in;
-}
-
-#add button {
-    background: rgb(76, 76, 230);
+fieldset button{
+    margin-left: auto;
+    margin-right:auto;
+    background: rgb(133, 36, 153);
     color: white;
-    padding: 10px 30px 10px 30px;
-    border-radius: 10px;
+    padding:10px 30px 10px 30px;
+    margin-top: 0.5rem;
+    border-radius: 0%;
     border: 0px;
+    cursor: pointer;
     transition: all 0.2s ease-in;
 }
 
-#add button:hover {
-    background: rgb(37, 37, 158);
+fieldset button:hover{
+    margin-left: auto;
+    margin-right:auto;
+    background: rgb(91, 25, 104);
     color: white;
-    padding: 10px 40px 10px 40px;
-    border-radius: 10px;
+    padding:10px 40px 10px 40px;
+    margin-top: 0.5rem;
+    border-radius: 0%;
     border: 0px;
+    cursor: pointer;
     transition: all 0.2s ease-in;
-}
-
-#add button:disabled {
-    background: rgb(38, 38, 44);
-    color: white;
-    padding: 10px 30px 10px 30px;
-    border-radius: 10px;
-    border: 0px;
-    transition: all 0.2s ease-in;
-}
-
-#add button:disabled:hover {
-    background: rgb(38, 38, 44);
-    color: white;
-    padding: 10px 40px 10px 40px;
-    border-radius: 10px;
-    border: 0px;
-    transition: all 0.2s ease-in;
-}
-
-#add:after {
-    clear: both;
-    height: 60px;
 }
