--- a/redux-activity/src/container/addproduct.css
+++ b/redux-activity/src/container/addproduct.css
@@ -12,17 +12,19 @@ form legend{
     text-align: center;
     padding: 5px;
     background-color:white;
-    border: 1px solid black
+    box-shadow: 0 0 0.5rem black;
 }
 
 form fieldset{
     width: 400px;
+    border:none;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align:center;
     background-color:white;
     padding: 20px;
+    box-shadow: 0 0 0.5rem black;
 }
 
 fieldset input, fieldset select{
